@@ -1,3 +1,8 @@
+2007-01-22  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlfilesource.c: (gnl_filesource_init):
+	Use decodebin2 if the USE_DECODEBIN2 env variable is set.
+
 2007-01-10  Edward Hervey  <edward@fluendo.com>
 
 	* gnl/gnlcomposition.c: (gnl_composition_reset),
